# kafka_health_monitor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alert_handler.py  analytics_consumer.py  anomaly_detector.py  create_topics.py  dashboard_server.py  docker-compose.yml  patient_simulator.py  pyproject.toml  requirements.txt  s3_archiver.py  setup_aws.py
consumers/: anomaly_detector.py  dashboard_server.py  s3_archiver.py
dashboard/: index.html
infra/terraform/: lambda.tf  main.tf  s3.tf  sns_sqs.tf
lambda/: alert_handler.py
producer/: patient_simulator.py
setup/: create_topics.py  seed_patients.py
tests/: test_anomaly.py  test_archiver.py  test_producer.py
