[project]
name = "health-monitor"
version = "1.0.0"
description = "Real-time patient health monitoring with Kafka + AWS"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "__pycache__", "infra"]

[tool.ruff.lint]
ignore = ["E501", "F401"]
